--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url                      : "https://gbly2024.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/Golden_State_Worriors.jpg"
+logo                     : "./assets/images/Golden_State_Worriors.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
